SESSION: define iface and move errh

--- a/src/MPC_Lowcomm/src/Makefile.in
+++ b/src/MPC_Lowcomm/src/Makefile.in
@@ -186,9 +186,9 @@ libmpclowcomm_la_DEPENDENCIES = $(am__DEPENDENCIES_1) \
 	../../MPC_Launch/src/libmpclaunch.la $(am__DEPENDENCIES_2)
 am__libmpclowcomm_la_SOURCES_DIST = coll.c comm.c sctk_checksum.c \
 	sctk_control_messages.c ft.c group.c communicator.c shm_coll.c \
-	lowcomm_config.c sctk_handle.c sctk_low_level_comm.c \
-	multirail.c sctk_net_tools.c sctk_net_topology.c \
-	lowcomm_thread.c sctk_rail.c sctk_reorder.c endpoint.c \
+	lowcomm_config.c sctk_low_level_comm.c multirail.c \
+	sctk_net_tools.c sctk_net_topology.c lowcomm_thread.c \
+	sctk_rail.c sctk_reorder.c endpoint.c \
 	sctk_topological_polling.c sctk_topological_rail.c \
 	sctk_window.c workshare.c ./tcp/sctk_tcp.c \
 	./tcp/sctk_tcp_rdma.c ./tcp/sctk_tcp_toolkit.c \
@@ -250,20 +250,20 @@ am__dirstamp = $(am__leading_dot)dirstamp
 @MPC_HAVE_AM_TRUE@am__objects_4 = am.lo
 am_libmpclowcomm_la_OBJECTS = coll.lo comm.lo sctk_checksum.lo \
 	sctk_control_messages.lo ft.lo group.lo communicator.lo \
-	shm_coll.lo lowcomm_config.lo sctk_handle.lo \
-	sctk_low_level_comm.lo multirail.lo sctk_net_tools.lo \
-	sctk_net_topology.lo lowcomm_thread.lo sctk_rail.lo \
-	sctk_reorder.lo endpoint.lo sctk_topological_polling.lo \
-	sctk_topological_rail.lo sctk_window.lo workshare.lo \
-	./tcp/sctk_tcp.lo ./tcp/sctk_tcp_rdma.lo \
-	./tcp/sctk_tcp_toolkit.lo ./shm/sctk_shm.lo \
-	./shm/sctk_shm_eager.lo ./shm/sctk_shm_raw_queues.lo \
-	./shm/sctk_shm_cma.lo ./shm/sctk_shm_frag.lo \
-	./shm/sctk_shm_qemu.lo ./shm/sctk_shm_raw_queues_internals.lo \
-	$(am__objects_1) $(am__objects_2) $(am__objects_3) \
-	./cplane/auth.lo ./cplane/peer.lo ./cplane/proto.lo \
-	./cplane/port.lo ./cplane/monitor.lo ./cplane/set.lo \
-	./cplane/uid.lo ./cplane/name.lo $(am__objects_4)
+	shm_coll.lo lowcomm_config.lo sctk_low_level_comm.lo \
+	multirail.lo sctk_net_tools.lo sctk_net_topology.lo \
+	lowcomm_thread.lo sctk_rail.lo sctk_reorder.lo endpoint.lo \
+	sctk_topological_polling.lo sctk_topological_rail.lo \
+	sctk_window.lo workshare.lo ./tcp/sctk_tcp.lo \
+	./tcp/sctk_tcp_rdma.lo ./tcp/sctk_tcp_toolkit.lo \
+	./shm/sctk_shm.lo ./shm/sctk_shm_eager.lo \
+	./shm/sctk_shm_raw_queues.lo ./shm/sctk_shm_cma.lo \
+	./shm/sctk_shm_frag.lo ./shm/sctk_shm_qemu.lo \
+	./shm/sctk_shm_raw_queues_internals.lo $(am__objects_1) \
+	$(am__objects_2) $(am__objects_3) ./cplane/auth.lo \
+	./cplane/peer.lo ./cplane/proto.lo ./cplane/port.lo \
+	./cplane/monitor.lo ./cplane/set.lo ./cplane/uid.lo \
+	./cplane/name.lo $(am__objects_4)
 libmpclowcomm_la_OBJECTS = $(am_libmpclowcomm_la_OBJECTS)
 AM_V_lt = $(am__v_lt_@AM_V@)
 am__v_lt_ = $(am__v_lt_@AM_DEFAULT_V@)
@@ -653,9 +653,9 @@ lib_LTLIBRARIES = libmpclowcomm.la
 # SHM driver #
 libmpclowcomm_la_SOURCES = coll.c comm.c sctk_checksum.c \
 	sctk_control_messages.c ft.c group.c communicator.c shm_coll.c \
-	lowcomm_config.c sctk_handle.c sctk_low_level_comm.c \
-	multirail.c sctk_net_tools.c sctk_net_topology.c \
-	lowcomm_thread.c sctk_rail.c sctk_reorder.c endpoint.c \
+	lowcomm_config.c sctk_low_level_comm.c multirail.c \
+	sctk_net_tools.c sctk_net_topology.c lowcomm_thread.c \
+	sctk_rail.c sctk_reorder.c endpoint.c \
 	sctk_topological_polling.c sctk_topological_rail.c \
 	sctk_window.c workshare.c ./tcp/sctk_tcp.c \
 	./tcp/sctk_tcp_rdma.c ./tcp/sctk_tcp_toolkit.c \
@@ -904,7 +904,6 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/multirail.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/sctk_checksum.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/sctk_control_messages.Plo@am__quote@
-@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/sctk_handle.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/sctk_low_level_comm.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/sctk_net_tools.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/sctk_net_topology.Plo@am__quote@
