--- a/src/MPC_Lowcomm/src/Makefile.in
+++ b/src/MPC_Lowcomm/src/Makefile.in
@@ -190,7 +190,7 @@ am__libmpclowcomm_la_SOURCES_DIST = coll.c comm.c sctk_checksum.c \
 	sctk_net_tools.c sctk_net_topology.c lowcomm_thread.c \
 	sctk_rail.c sctk_reorder.c endpoint.c \
 	sctk_topological_polling.c sctk_topological_rail.c \
-	sctk_window.c workshare.c ./tcp/sctk_tcp.c \
+	sctk_window.c workshare.c pset.c ./tcp/sctk_tcp.c \
 	./tcp/sctk_tcp_rdma.c ./tcp/sctk_tcp_toolkit.c \
 	./shm/sctk_shm.c ./shm/sctk_shm_eager.c \
 	./shm/sctk_shm_raw_queues.c ./shm/sctk_shm_cma.c \
@@ -254,7 +254,7 @@ am_libmpclowcomm_la_OBJECTS = coll.lo comm.lo sctk_checksum.lo \
 	multirail.lo sctk_net_tools.lo sctk_net_topology.lo \
 	lowcomm_thread.lo sctk_rail.lo sctk_reorder.lo endpoint.lo \
 	sctk_topological_polling.lo sctk_topological_rail.lo \
-	sctk_window.lo workshare.lo ./tcp/sctk_tcp.lo \
+	sctk_window.lo workshare.lo pset.lo ./tcp/sctk_tcp.lo \
 	./tcp/sctk_tcp_rdma.lo ./tcp/sctk_tcp_toolkit.lo \
 	./shm/sctk_shm.lo ./shm/sctk_shm_eager.lo \
 	./shm/sctk_shm_raw_queues.lo ./shm/sctk_shm_cma.lo \
@@ -657,7 +657,7 @@ libmpclowcomm_la_SOURCES = coll.c comm.c sctk_checksum.c \
 	sctk_net_tools.c sctk_net_topology.c lowcomm_thread.c \
 	sctk_rail.c sctk_reorder.c endpoint.c \
 	sctk_topological_polling.c sctk_topological_rail.c \
-	sctk_window.c workshare.c ./tcp/sctk_tcp.c \
+	sctk_window.c workshare.c pset.c ./tcp/sctk_tcp.c \
 	./tcp/sctk_tcp_rdma.c ./tcp/sctk_tcp_toolkit.c \
 	./shm/sctk_shm.c ./shm/sctk_shm_eager.c \
 	./shm/sctk_shm_raw_queues.c ./shm/sctk_shm_cma.c \
@@ -902,6 +902,7 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/lowcomm_config.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/lowcomm_thread.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/multirail.Plo@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/pset.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/sctk_checksum.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/sctk_control_messages.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/sctk_low_level_comm.Plo@am__quote@
