--- a/src/MPC_MPI/src/Makefile.in
+++ b/src/MPC_MPI/src/Makefile.in
@@ -148,7 +148,7 @@ am__libmpcmpi_la_SOURCES_DIST = comm_lib.c egreq_nbc.c mpc_extern32.c \
 	mpc_mpi_halo.c mpc_reduction.c mpi_rma.c mpi_rma_win.c mpit.c \
 	datatype.c egreq_progress.c mpc_info.c mpc_nbc.c \
 	mpi_rma_ctrl_msg.c mpi_conf.c mpc_coll.c session.c errh.c \
-	egreq_classes.c mpc_cs.c mpc_mpi.c \
+	mgroup.c egreq_classes.c mpc_cs.c mpc_mpi.c \
 	mpc_nbc_progress_thread_binding.c mpi_alloc_mem.c \
 	mpi_rma_epoch.c fortran.c
 @MPC_FORTRAN_ENABLED_TRUE@am__objects_1 = fortran.lo
@@ -156,7 +156,7 @@ am_libmpcmpi_la_OBJECTS = comm_lib.lo egreq_nbc.lo mpc_extern32.lo \
 	mpc_mpi_halo.lo mpc_reduction.lo mpi_rma.lo mpi_rma_win.lo \
 	mpit.lo datatype.lo egreq_progress.lo mpc_info.lo mpc_nbc.lo \
 	mpi_rma_ctrl_msg.lo mpi_conf.lo mpc_coll.lo session.lo errh.lo \
-	egreq_classes.lo mpc_cs.lo mpc_mpi.lo \
+	mgroup.lo egreq_classes.lo mpc_cs.lo mpc_mpi.lo \
 	mpc_nbc_progress_thread_binding.lo mpi_alloc_mem.lo \
 	mpi_rma_epoch.lo $(am__objects_1)
 libmpcmpi_la_OBJECTS = $(am_libmpcmpi_la_OBJECTS)
@@ -548,7 +548,7 @@ libmpcmpi_la_SOURCES = comm_lib.c egreq_nbc.c mpc_extern32.c \
 	mpc_mpi_halo.c mpc_reduction.c mpi_rma.c mpi_rma_win.c mpit.c \
 	datatype.c egreq_progress.c mpc_info.c mpc_nbc.c \
 	mpi_rma_ctrl_msg.c mpi_conf.c mpc_coll.c session.c errh.c \
-	egreq_classes.c mpc_cs.c mpc_mpi.c \
+	mgroup.c egreq_classes.c mpc_cs.c mpc_mpi.c \
 	mpi_alloc_mem.c mpi_rma_epoch.c $(am__append_6)
 	mpi_rma_epoch.c $(am__append_5)
 libmpcmpi_la_LIBADD = ../../MPC_Lowcomm/src/libmpclowcomm.la -lrt
@@ -637,6 +637,7 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/egreq_progress.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/errh.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/fortran.Plo@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/mgroup.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/mpc_coll.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/mpc_cs.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/mpc_extern32.Plo@am__quote@
