Refractoring     - - mpcomp_* -> mpc_omp on functions name     - cleaned the ABI

--- a/src/MPC_OpenMP/Makefile.am
+++ b/src/MPC_OpenMP/Makefile.am
@@ -22,5 +22,5 @@
 #                                                                      #
 ########################################################################
 mpc_headerdir=$(pkgincludedir)
-mpc_header_HEADERS= ./include/omp_abi.h ./include/mpcomp_abi.h ./include/mpcomp.h ./include/omp.h ./include/ompt.h ./include/omp-tools.h
+mpc_header_HEADERS= ./include/omp_abi.h ./include/mpcomp_abi.h ./include/mpc_omp.h ./include/omp.h ./include/ompt.h ./include/omp-tools.h
 SUBDIRS=src
