start porting cea/these/pereirar

--- a/src/MPC_OpenMP/Makefile.in
+++ b/src/MPC_OpenMP/Makefile.in
@@ -519,7 +519,7 @@ top_srcdir = @top_srcdir@
 ########################################################################
 mpc_headerdir = $(pkgincludedir)
 mpc_header_HEADERS = ./include/mpc_omp.h ./include/mpc_omp_task_property.h ./include/omp.h \
-					./include/mpcomp_abi.h ./include/omp_abi.h \
+					./include/mpc_omp_abi.h ./include/omp_abi.h \
                     ./include/ompt.h ./include/omp-tools.h
 
 SUBDIRS = src
