--- a/src/MPC_Common/Makefile.am
+++ b/src/MPC_Common/Makefile.am
@@ -24,6 +24,6 @@
 
 mpc_headerdir=$(pkgincludedir)
 
-mpc_header_HEADERS= $(abs_builddir)/include/mpc_common_types.h  $(abs_srcdir)/include/mpc_common_debugger.h   $(abs_srcdir)/include/mpc_common_aio.h
+mpc_header_HEADERS= $(abs_builddir)/include/mpc_common_types.h  $(abs_srcdir)/include/mpc_common_debugger.h   $(abs_srcdir)/include/mpc_common_aio.h $(abs_srcdir)/include/mpc_common_recycler.h
 
 SUBDIRS=src
