interop mpi/omp (bug for now)

--- a/src/MPC_OpenMP/src/Makefile.am
+++ b/src/MPC_OpenMP/src/Makefile.am
@@ -27,6 +27,7 @@ AM_CPPFLAGS += -I$(abs_top_srcdir)/src/MPC_Config/include/ -I$(abs_top_srcdir)/s
 AM_CPPFLAGS += -I$(abs_top_srcdir)/src/MPC_Topology/include/ -I$(abs_top_srcdir)/src/MPC_Lowcomm/include/
 AM_CPPFLAGS += -I$(abs_top_srcdir)/src/MPC_Launch/include/ -I$(abs_top_builddir)/src/include/
 AM_CPPFLAGS += -I$(abs_top_srcdir)/src/MPC_Threads/src/ -I$(abs_top_srcdir)/src/MPC_Threads/include/
+AM_CPPFLAGS += -I$(abs_top_srcdir)/src/MPC_MPI/src/ -I$(abs_top_srcdir)/src/MPC_MPI/include/
 
 AM_CPPFLAGS += -I$(abs_top_srcdir)/src/MPC_OpenMP/include/ $(VMEM_CFLAGS)
 
@@ -41,7 +42,8 @@ lib_LTLIBRARIES = libmpcomp.la
 libmpcomp_la_SOURCES = mpcomp_api.c mpcomp_core.c mpcomp_fortran.c mpcomp_loop.c
 libmpcomp_la_SOURCES += mpcomp_parallel_region.c mpcomp_places_env.c mpcomp_spinning_core.c
 libmpcomp_la_SOURCES += mpcomp_stack.c mpcomp_stack_node_leaf.c mpcomp_sync.c mpcomp_task.c
-libmpcomp_la_SOURCES += mpcomp_tree.c mpcomp_alloc.c omp_gomp.c omp_intel_atomics.c omp_intel.c omp_ompt.c
+libmpcomp_la_SOURCES += mpcomp_tree.c mpcomp_alloc.c omp_gomp.c omp_intel_atomics.c omp_intel.c
+libmpcomp_la_SOURCES += mpcomp_task_trace.c mpcomp_callback.c
 
 tools_src = tools/src/mpcompt_entryPoints.c tools/src/mpcompt_init.c tools/src/mpcompt_instance.c \
             tools/callback/mpcompt_cancel.c tools/callback/mpcompt_control_tool.c \
