--- a/src/MPC_OpenMP/Makefile.in
+++ b/src/MPC_OpenMP/Makefile.in
@@ -518,8 +518,8 @@ top_srcdir = @top_srcdir@
 #                                                                      #
 ########################################################################
 mpc_headerdir = $(pkgincludedir)
-mpc_header_HEADERS = ./include/mpc_omp.h ./include/mpc_omp_task_property.h ./include/omp.h \
-					./include/mpc_omp_abi.h ./include/omp_abi.h \
+mpc_header_HEADERS = ./include/mpc_omp.h ./include/omp.h \
+					./include/mpcomp_abi.h ./include/omp_abi.h \
                     ./include/ompt.h ./include/omp-tools.h
 
 SUBDIRS = src
