--- a/mpc_config.h.in
+++ b/mpc_config.h.in
@@ -817,11 +817,11 @@
 /* MPC debug messages output was enabled */
 #undef MPC_ENABLE_DEBUG_MESSAGES
 
-/* MPC Workshare was enabled */
-#undef MPC_ENABLE_WORKSHARE
-
 /* MPC Colored output */
 #undef MPC_ENABLE_SHELL_COLORS
+
+/* MPI Workshare was enabled */
+#undef MPC_ENABLE_WORKSHARE
 
 /* MPC_Fortran module was enabled */
 #undef MPC_FORTRAN
