--- a/src/MPC_Common/src/Makefile.in
+++ b/src/MPC_Common/src/Makefile.in
@@ -128,7 +128,7 @@ libmpccommon_la_DEPENDENCIES =  \
 am__libmpccommon_la_SOURCES_DIST = aio.c bit_array.c fifo.c \
 	hashtable.c io_helper.c rank.c debug.c sctk_no_alloc.c \
 	sctk_pm_json.c flags.c debugger.c elf_32.c elf_64.c spinlock.c \
-	base64.c ./profiler/sctk_internal_profiler.c \
+	base64.c recycler.c ./profiler/sctk_internal_profiler.c \
 	./profiler/sctk_performance_tree.c \
 	./profiler/sctk_profile_meta.c \
 	./profiler/sctk_profiler_array.c \
@@ -150,7 +150,7 @@ am__dirstamp = $(am__leading_dot)dirstamp
 am_libmpccommon_la_OBJECTS = aio.lo bit_array.lo fifo.lo hashtable.lo \
 	io_helper.lo rank.lo debug.lo sctk_no_alloc.lo sctk_pm_json.lo \
 	flags.lo debugger.lo elf_32.lo elf_64.lo spinlock.lo base64.lo \
-	$(am__objects_1)
+	recycler.lo $(am__objects_1)
 libmpccommon_la_OBJECTS = $(am_libmpccommon_la_OBJECTS)
 AM_V_lt = $(am__v_lt_@AM_V@)
 am__v_lt_ = $(am__v_lt_@AM_DEFAULT_V@)
@@ -528,7 +528,7 @@ CLEANFILES = elf_64.c
 libmpccommon_la_SOURCES = aio.c bit_array.c fifo.c hashtable.c \
 	io_helper.c rank.c debug.c sctk_no_alloc.c sctk_pm_json.c \
 	flags.c debugger.c elf_32.c elf_64.c spinlock.c base64.c \
-	$(am__append_3)
+	recycler.c $(am__append_3)
 libmpccommon_la_LIBADD = $(abs_top_builddir)/src/MPC_Arch/src/libmpcarch.la $(OPA_LIBS) $(ALLOC_LIBS) $(UNW_LIBS)
 all: all-am
 
@@ -622,6 +622,7 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/hashtable.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/io_helper.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/rank.Plo@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/recycler.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/sctk_no_alloc.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/sctk_pm_json.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/spinlock.Plo@am__quote@
