--- a/src/MPC_OpenMP/src/Makefile.in
+++ b/src/MPC_OpenMP/src/Makefile.in
@@ -148,7 +148,9 @@ am__v_lt_1 =
 libiomp5_la_LIBADD =
 am_libiomp5_la_OBJECTS = ./fakelib/fakelib.lo
 libiomp5_la_OBJECTS = $(am_libiomp5_la_OBJECTS)
-libmpcomp_la_DEPENDENCIES = ../../MPC_Launch/src/libmpclaunch.la
+am__DEPENDENCIES_1 =
+libmpcomp_la_DEPENDENCIES = ../../MPC_Launch/src/libmpclaunch.la \
+	$(am__DEPENDENCIES_1)
 am__objects_1 = tools/src/mpcompt_entryPoints.lo \
 	tools/src/mpcompt_init.lo tools/src/mpcompt_instance.lo \
 	tools/callback/mpcompt_cancel.lo \
@@ -167,8 +169,9 @@ am_libmpcomp_la_OBJECTS = mpcomp_api.lo mpcomp_core.lo \
 	mpcomp_fortran.lo mpcomp_loop.lo mpcomp_parallel_region.lo \
 	mpcomp_places_env.lo mpcomp_spinning_core.lo mpcomp_stack.lo \
 	mpcomp_stack_node_leaf.lo mpcomp_sync.lo mpcomp_task.lo \
-	mpcomp_tree.lo omp_gomp.lo mpcomp_alloc.lo omp_intel_atomics.lo omp_intel.lo \
-	$(am__objects_1)
+	mpcomp_tree.lo mpcomp_alloc.lo omp_gomp.lo \
+	omp_intel_atomics.lo omp_intel.lo mpcomp_task_trace.lo \
+	mpcomp_callback.lo $(am__objects_1)
 libmpcomp_la_OBJECTS = $(am_libmpcomp_la_OBJECTS)
 libmpcomp_la_LINK = $(LIBTOOL) $(AM_V_lt) --tag=CC $(AM_LIBTOOLFLAGS) \
 	$(LIBTOOLFLAGS) --mode=link $(CCLD) $(AM_CFLAGS) $(CFLAGS) \
@@ -286,7 +289,10 @@ EXTLS_CFLAGS = @EXTLS_CFLAGS@
 EXTLS_LIBS = @EXTLS_LIBS@
 FC = @FC@
 FCFLAGS = @FCFLAGS@
+FFI_CFLAGS = @FFI_CFLAGS@
+FFI_LIBS = @FFI_LIBS@
 FGREP = @FGREP@
+FORTRAN_ARG_MISMATCH_ARG = @FORTRAN_ARG_MISMATCH_ARG@
 GREP = @GREP@
 HAVE_BUILTIN_EXPECT = @HAVE_BUILTIN_EXPECT@
 HAVE_MPC_THREAD = @HAVE_MPC_THREAD@
@@ -354,11 +360,15 @@ MPC_CONFIG_SCHED_RR = @MPC_CONFIG_SCHED_RR@
 MPC_CONFIG_SEM_FAILED = @MPC_CONFIG_SEM_FAILED@
 MPC_CONFIG_SEM_VALUE_MAX = @MPC_CONFIG_SEM_VALUE_MAX@
 MPC_FORTRAN_ENABLED = @MPC_FORTRAN_ENABLED@
+MPC_FORTRAN_PKGCONFIG_CFLAGS = @MPC_FORTRAN_PKGCONFIG_CFLAGS@
+MPC_FORTRAN_PKGCONFIG_LIB = @MPC_FORTRAN_PKGCONFIG_LIB@
 MPC_GENERATION_DATE = @MPC_GENERATION_DATE@
 MPC_HAVE_DMTCP = @MPC_HAVE_DMTCP@
 MPC_HAVE_PROFILER = @MPC_HAVE_PROFILER@
 MPC_IN_PROCESS_MODE = @MPC_IN_PROCESS_MODE@
+MPC_IO_PKGCONFIG_LIB = @MPC_IO_PKGCONFIG_LIB@
 MPC_LAUNCHER = @MPC_LAUNCHER@
+MPC_LAUNCHER_PROGRAM = @MPC_LAUNCHER_PROGRAM@
 MPC_LOWCOMM_ENABLED = @MPC_LOWCOMM_ENABLED@
 MPC_MODULE_DEFINES = @MPC_MODULE_DEFINES@
 MPC_MODULE_LIST = @MPC_MODULE_LIST@
@@ -369,18 +379,20 @@ MPC_OPENMP_ENABLED = @MPC_OPENMP_ENABLED@
 MPC_TARGET_ARCHITECTURE = @MPC_TARGET_ARCHITECTURE@
 MPC_THREAD_ENABLED = @MPC_THREAD_ENABLED@
 MPC_THREAD_KEYS_MAX = @MPC_THREAD_KEYS_MAX@
+MPC_THREAD_PKGCONFIG_DEP = @MPC_THREAD_PKGCONFIG_DEP@
 MPC_VERSION_MAJOR = @MPC_VERSION_MAJOR@
 MPC_VERSION_MINOR = @MPC_VERSION_MINOR@
 MPC_VERSION_PATCH = @MPC_VERSION_PATCH@
 MPC_VERSION_PRE = @MPC_VERSION_PRE@
 MPC_VERSION_STRING = @MPC_VERSION_STRING@
-MPIEXEC_HYDDRA = @MPIEXEC_HYDDRA@
 MPIEXEC_HYDRA = @MPIEXEC_HYDRA@
 NEEDS_MPI_FINT = @NEEDS_MPI_FINT@
 NM = @NM@
 NMEDIT = @NMEDIT@
 OBJDUMP = @OBJDUMP@
 OBJEXT = @OBJEXT@
+OFI_CFLAGS = @OFI_CFLAGS@
+OFI_LIBS = @OFI_LIBS@
 OPA_CFLAGS = @OPA_CFLAGS@
 OPA_LIBS = @OPA_LIBS@
 OTOOL = @OTOOL@
@@ -399,10 +411,14 @@ PKG_CONFIG_LIBDIR = @PKG_CONFIG_LIBDIR@
 PKG_CONFIG_PATH = @PKG_CONFIG_PATH@
 PKG_DATADIR = @PKG_DATADIR@
 PKG_INCDIR = @PKG_INCDIR@
+PMIX_CFLAGS = @PMIX_CFLAGS@
+PMIX_LIBS = @PMIX_LIBS@
 PMI_CFLAGS = @PMI_CFLAGS@
 PMI_LIBS = @PMI_LIBS@
 PORTALS_CFLAGS = @PORTALS_CFLAGS@
 PORTALS_LIBS = @PORTALS_LIBS@
+PRTERUN = @PRTERUN@
+PRUN = @PRUN@
 PYTHON = @PYTHON@
 PYTHON_EXEC_PREFIX = @PYTHON_EXEC_PREFIX@
 PYTHON_PLATFORM = @PYTHON_PLATFORM@
@@ -427,15 +443,14 @@ SIZEOF_PTHREAD_RWLOCKATTR_T = @SIZEOF_PTHREAD_RWLOCKATTR_T@
 SIZEOF_PTHREAD_RWLOCK_T = @SIZEOF_PTHREAD_RWLOCK_T@
 SIZEOF_PTHREAD_SPINLOCK_T = @SIZEOF_PTHREAD_SPINLOCK_T@
 SIZEOF_SEM_T = @SIZEOF_SEM_T@
+SRUN_IN_PATH = @SRUN_IN_PATH@
 STRIP = @STRIP@
 UNW_CFLAGS = @UNW_CFLAGS@
 UNW_LIBS = @UNW_LIBS@
 USING_ASAN = @USING_ASAN@
 VERSION = @VERSION@
-XML2_CFLAGS = @XML2_CFLAGS@
-XML2_LIBS = @XML2_LIBS@
-XMLLINT = @XMLLINT@
-XSLTPROC = @XSLTPROC@
+VMEM_CFLAGS = @VMEM_CFLAGS@
+VMEM_LIBS = @VMEM_LIBS@
 abs_builddir = @abs_builddir@
 abs_srcdir = @abs_srcdir@
 abs_top_builddir = @abs_top_builddir@
@@ -536,7 +551,10 @@ AM_CPPFLAGS = -I$(abs_top_srcdir)/src/MPC_Common/include/ \
 	-I$(abs_top_builddir)/src/include/ \
 	-I$(abs_top_srcdir)/src/MPC_Threads/src/ \
 	-I$(abs_top_srcdir)/src/MPC_Threads/include/ \
-	-I$(abs_top_srcdir)/src/MPC_OpenMP/include/ $(tools_inc)
+	-I$(abs_top_srcdir)/src/MPC_MPI/src/ \
+	-I$(abs_top_srcdir)/src/MPC_MPI/include/ \
+	-I$(abs_top_srcdir)/src/MPC_OpenMP/include/ $(VMEM_CFLAGS) \
+	$(tools_inc)
 tools_inc = -I$(abs_top_srcdir)/src/MPC_OpenMP/src/tools/src/ \
             -I$(abs_top_srcdir)/src/MPC_OpenMP/src/tools/callback/ \
             -I$(abs_top_srcdir)/src/MPC_OpenMP/src/tools/trace/
@@ -545,8 +563,9 @@ lib_LTLIBRARIES = libmpcomp.la libiomp5.la libgomp.la
 libmpcomp_la_SOURCES = mpcomp_api.c mpcomp_core.c mpcomp_fortran.c \
 	mpcomp_loop.c mpcomp_parallel_region.c mpcomp_places_env.c \
 	mpcomp_spinning_core.c mpcomp_stack.c mpcomp_stack_node_leaf.c \
-	mpcomp_sync.c mpcomp_task.c mpcomp_tree.c omp_gomp.c mpcomp_alloc.c \
-	omp_intel_atomics.c omp_intel.c $(tools_src)
+	mpcomp_sync.c mpcomp_task.c mpcomp_tree.c mpcomp_alloc.c \
+	omp_gomp.c omp_intel_atomics.c omp_intel.c mpcomp_task_trace.c \
+	mpcomp_callback.c $(tools_src)
 tools_src = tools/src/mpcompt_entryPoints.c tools/src/mpcompt_init.c tools/src/mpcompt_instance.c \
             tools/callback/mpcompt_cancel.c tools/callback/mpcompt_control_tool.c \
             tools/callback/mpcompt_device.c tools/callback/mpcompt_dispatch.c \
@@ -556,7 +575,7 @@ tools_src = tools/src/mpcompt_entryPoints.c tools/src/mpcompt_init.c tools/src/m
             tools/callback/mpcompt_thread.c tools/callback/mpcompt_workShare.c
 
 libmpcomp_la_LDFLAGS = -Wl,--version-script=$(abs_top_srcdir)/src/MPC_OpenMP/version_gomp.txt
-libmpcomp_la_LIBADD = ../../MPC_Launch/src/libmpclaunch.la
+libmpcomp_la_LIBADD = ../../MPC_Launch/src/libmpclaunch.la $(VMEM_LIBS)
 libiomp5_la_SOURCES = ./fakelib/fakelib.c
 libgomp_la_SOURCES = ./fakelib/fakelib.c
 all: all-am
@@ -702,6 +721,7 @@ distclean-compile:
 
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/mpcomp_alloc.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/mpcomp_api.Plo@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/mpcomp_callback.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/mpcomp_core.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/mpcomp_fortran.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/mpcomp_loop.Plo@am__quote@
@@ -712,6 +732,7 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/mpcomp_stack_node_leaf.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/mpcomp_sync.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/mpcomp_task.Plo@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/mpcomp_task_trace.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/mpcomp_tree.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/omp_gomp.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/omp_intel.Plo@am__quote@
