--- a/src/MPC_Threads/Makefile.in
+++ b/src/MPC_Threads/Makefile.in
@@ -520,7 +520,8 @@ top_srcdir = @top_srcdir@
 mpc_headerdir = $(pkgincludedir)
 mpc_header_HEADERS = ./include/mpc_thread.h \
 	./include/mpcposix/pthread.h ./include/mpcposix/semaphore.h \
-	./include/mpc_thread_engines.h
+	./include/mpc_thread_engines.h \
+	./include/mpc_thread_mpi_omp_interop.h
 SUBDIRS = src
 all: all-recursive
 
