BUILD: multiple fixes to build system
- Makefiles after repo cleanup
- Installed MPI files when disabled (fixes #79)

--- a/src/bin/Makefile.am
+++ b/src/bin/Makefile.am
@@ -2,10 +2,19 @@
 # Compiler Setup
 #
 
-bin_SCRIPTS = mpc_cc mpc_cxx mpc_cflags mpc_ldflags mpicc mpicxx
+bin_SCRIPTS = mpc_cc mpc_cxx mpc_cflags mpc_ldflags
+
+if MPC_MPI_ENABLED
+  bin_SCRIPTS += mpicc mpicxx
+endif
 
 if MPC_FORTRAN_ENABLED
-  bin_SCRIPTS += mpc_f77 mpif77
+  bin_SCRIPTS += mpc_f77
+
+if MPC_MPI_ENABLED
+    bin_SCRIPTS += mpif77
+endif
+
 endif
 
 #
