--- a/src/bin/Makefile.in
+++ b/src/bin/Makefile.in
@@ -93,16 +93,18 @@ PRE_UNINSTALL = :
 POST_UNINSTALL = :
 build_triplet = @build@
 host_triplet = @host@
-@MPC_FORTRAN_ENABLED_TRUE@am__append_1 = mpc_f77 mpif77
+@MPC_MPI_ENABLED_TRUE@am__append_1 = mpicc mpicxx
+@MPC_FORTRAN_ENABLED_TRUE@am__append_2 = mpc_f77
+@MPC_FORTRAN_ENABLED_TRUE@@MPC_MPI_ENABLED_TRUE@am__append_3 = mpif77
 
 #
 # Cuda support
 #
-@MPC_CUDA_ENABLED_TRUE@am__append_2 = mpc_nvcc
+@MPC_CUDA_ENABLED_TRUE@am__append_4 = mpc_nvcc
 @PRRTE_LAUNCHER_ENABLED_FALSE@bin_PROGRAMS = mpirun$(EXEEXT)
-@MPC_HAS_SRUN_SUPPORT_TRUE@am__append_3 = mpcrun_opt/mpcrun_srun
-@HYDRA_LAUNCHER_ENABLED_TRUE@am__append_4 = mpcrun_opt/mpcrun_hydra mpcrun_opt/mpcrun_salloc_hydra 
-@PRRTE_LAUNCHER_ENABLED_TRUE@am__append_5 = mpcrun_opt/mpcrun_prrte
+@MPC_HAS_SRUN_SUPPORT_TRUE@am__append_5 = mpcrun_opt/mpcrun_srun
+@HYDRA_LAUNCHER_ENABLED_TRUE@am__append_6 = mpcrun_opt/mpcrun_hydra mpcrun_opt/mpcrun_salloc_hydra 
+@PRRTE_LAUNCHER_ENABLED_TRUE@am__append_7 = mpcrun_opt/mpcrun_prrte
 subdir = src/bin
 ACLOCAL_M4 = $(top_srcdir)/aclocal.m4
 am__aclocal_m4_deps = $(top_srcdir)/config/m4/ax_gcc_builtin.m4 \
@@ -512,8 +514,9 @@ top_srcdir = @top_srcdir@
 #
 # mpcrun
 #
-bin_SCRIPTS = mpc_cc mpc_cxx mpc_cflags mpc_ldflags mpicc mpicxx \
-	$(am__append_1) mpc_status mpcvars.sh $(am__append_2) mpcrun
+bin_SCRIPTS = mpc_cc mpc_cxx mpc_cflags mpc_ldflags $(am__append_1) \
+	$(am__append_2) $(am__append_3) mpc_status mpcvars.sh \
+	$(am__append_4) mpcrun
 pkgdata_SCRIPTS = mpc_compiler_common.sh
 
 # It duplicates mpcvarsh.sh but is needed for retrocompat
@@ -522,8 +525,8 @@ prefix_bin_SCRIPTS = mpcvars.sh
 @PRRTE_LAUNCHER_ENABLED_FALSE@mpirun_SOURCES = ./mpirun.c
 mpcrun_plugindir = $(pkgdatadir)/mpcrun_opt/
 mpcrun_plugin_SCRIPTS = mpcrun_opt/mpcrun_none \
-	mpcrun_opt/mpcrun_none_mpc-gdb $(am__append_3) $(am__append_4) \
-	$(am__append_5)
+	mpcrun_opt/mpcrun_none_mpc-gdb $(am__append_5) $(am__append_6) \
+	$(am__append_7)
 all: all-am
 
 .SUFFIXES:
