--- a/src/lib/Makefile.am
+++ b/src/lib/Makefile.am
@@ -1,9 +1,15 @@
 
 mpc_headerdir=$(pkgincludedir)
-mpc_header_HEADERS =  $(abs_top_builddir)/src/include/mpc_threads_config.h
-mpc_header_HEADERS += $(abs_top_builddir)/src/include/mpc.h $(abs_top_srcdir)/src/include/mpc_main.h
-mpc_header_HEADERS += $(abs_top_srcdir)/src/include/mpi.h
 
+mpc_header_HEADERS = $(abs_top_builddir)/src/include/mpc.h $(abs_top_srcdir)/src/include/mpc_main.h
+
+if MPC_THREAD_ENABLED
+  mpc_header_HEADERS +=  $(abs_top_builddir)/src/include/mpc_threads_config.h
+endif
+
+if MPC_MPI_ENABLED
+  mpc_header_HEADERS += $(abs_top_srcdir)/src/include/mpi.h
+endif
 #
 # Define the MPC Library
 #
