--- a/src/lib/Makefile.in
+++ b/src/lib/Makefile.in
@@ -89,6 +89,8 @@ PRE_UNINSTALL = :
 POST_UNINSTALL = :
 build_triplet = @build@
 host_triplet = @host@
+@MPC_THREAD_ENABLED_TRUE@am__append_1 = $(abs_top_builddir)/src/include/mpc_threads_config.h
+@MPC_MPI_ENABLED_TRUE@am__append_2 = $(abs_top_srcdir)/src/include/mpi.h
 subdir = src/lib
 ACLOCAL_M4 = $(top_srcdir)/aclocal.m4
 am__aclocal_m4_deps = $(top_srcdir)/config/m4/ax_gcc_builtin.m4 \
@@ -104,7 +106,7 @@ am__aclocal_m4_deps = $(top_srcdir)/config/m4/ax_gcc_builtin.m4 \
 	$(top_srcdir)/config/m4/pkg.m4 $(top_srcdir)/configure.ac
 am__configure_deps = $(am__aclocal_m4_deps) $(CONFIGURE_DEPENDENCIES) \
 	$(ACLOCAL_M4)
-DIST_COMMON = $(srcdir)/Makefile.am $(mpc_header_HEADERS) \
+DIST_COMMON = $(srcdir)/Makefile.am $(am__mpc_header_HEADERS_DIST) \
 	$(am__DIST_COMMON)
 mkinstalldirs = $(install_sh) -d
 CONFIG_HEADER = $(top_builddir)/mpc_config.h
@@ -184,6 +186,10 @@ am__can_run_installinfo = \
     n|no|NO) false;; \
     *) (install-info --version) >/dev/null 2>&1;; \
   esac
+am__mpc_header_HEADERS_DIST = $(abs_top_builddir)/src/include/mpc.h \
+	$(abs_top_srcdir)/src/include/mpc_main.h \
+	$(abs_top_builddir)/src/include/mpc_threads_config.h \
+	$(abs_top_srcdir)/src/include/mpi.h
 HEADERS = $(mpc_header_HEADERS)
 am__tagged_files = $(HEADERS) $(SOURCES) $(TAGS_FILES) $(LISP)
 # Read a list of newline-separated strings from the standard input,
@@ -480,12 +486,9 @@ top_build_prefix = @top_build_prefix@
 top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
 mpc_headerdir = $(pkgincludedir)
-mpc_header_HEADERS =  \
-	$(abs_top_builddir)/src/include/mpc_threads_config.h \
-	$(abs_top_builddir)/src/include/mpc.h \
-	$(abs_top_srcdir)/src/include/mpc_main.h \
-	$(abs_top_srcdir)/src/include/mpi.h
-
+mpc_header_HEADERS = $(abs_top_builddir)/src/include/mpc.h \
+	$(abs_top_srcdir)/src/include/mpc_main.h $(am__append_1) \
+	$(am__append_2)
 #
 # Define the MPC Library
 #
